# blackjack-cpp

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  readme.md
src/gameplay/characters/: player.cpp  player.h
src/gameplay/props/: deck.cpp  deck.h
src/graphics/shader/: ebo.cpp  ebo.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h
src/graphics/utils/: util.cpp  util.h
src/io/: key_action.h
src/state/: game.cpp  game.h
src/utils/: helpers.cpp  loggers.cpp  loggers.h  singleton.h
